
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int mach_port_t ;


 int MACH_MSG_TYPE_MAKE_SEND ;
 int MACH_PORT_NULL ;
 int MACH_PORT_RIGHT_RECEIVE ;
 int mach_port_allocate (int ,int ,int *) ;
 int mach_port_insert_right (int ,int ,int ,int ) ;
 int mach_task_self () ;

mach_port_t q() {
  mach_port_t p = MACH_PORT_NULL;
  mach_port_allocate(mach_task_self(), MACH_PORT_RIGHT_RECEIVE, &p);
  mach_port_insert_right(mach_task_self(), p, p, MACH_MSG_TYPE_MAKE_SEND);
  return p;
}
