; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_44007.c_q.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_44007.c_q.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_NULL = common dso_local global i32 0, align 4
@MACH_PORT_RIGHT_RECEIVE = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_MAKE_SEND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @q() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MACH_PORT_NULL, align 4
  store i32 %2, i32* %1, align 4
  %3 = call i32 (...) @mach_task_self()
  %4 = load i32, i32* @MACH_PORT_RIGHT_RECEIVE, align 4
  %5 = call i32 @mach_port_allocate(i32 %3, i32 %4, i32* %1)
  %6 = call i32 (...) @mach_task_self()
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @MACH_MSG_TYPE_MAKE_SEND, align 4
  %10 = call i32 @mach_port_insert_right(i32 %6, i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @mach_port_allocate(i32, i32, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_port_insert_right(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
